# EAFAWPROJECT

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  logger_env_test.py  main.py  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_logger.py  test_logging.py  test_simple.py
custom_jenkins/: Dockerfile
src/: main.py
src/agents/: finance_agents.py  invoice_agents.py
src/api/: finance_api.py  main.py
src/common/: __init__.py  custom_exception.py  logger.py
src/config/: settings.py  workflow_config.py
src/core/: base_agent.py  base_task.py  base_workflow.py  dependencies.py  workflow_engine.py
src/core/factories/: agent_factory.py  tool_factory.py
src/core/interfaces/: agent_interface.py  task_interface.py  tool_interface.py
src/crews/: finance_crew.py  invoice_crew.py
src/frontend/: streamlit_app.py
src/models/: finance_models.py
src/services/: finance_service.py
src/tasks/: finance_tasks.py  invoice_tasks.py
src/tools/: finance_tools.py  invoice_tools.py
src/workflows/: finance_workflow.py  invoice_workflow.py
